--- a/style.css
+++ b/style.css
@@ -1,21 +1,52 @@
+body {
+    font: 13px arial, sans-serif;
+}
+
+.logo {
+  padding-top: 100px;
+}
+
 img {
   display: block;
   margin: auto;
   padding-top: 87px;
+  width: 272px;
+  height: 201;
+  padding-bottom: 25px;
 }
 
 input {
   display: block;
   margin: auto;
+  width: 403px;
+  height: 38px;
+  padding: 6px 9px 0px 16px;
 }
+
 .navbar {
+  padding-top: 8px;
   display: inline-block;
-  line-height: 24px;
   outline: none;
   vertical-align: middle;
   position: absolute;
   right: 30px;
-  font: 13px arial, sans-serif;
+  padding 12px;
+  margin: 8px;
+  word-spacing: .8em;
+}
+
+.signin {
+  color: #fff;
+  background-color: #4285f4;
+  display: inline;
+  font-weight: bold;
+  word-spacing: normal;
+  padding: 6px 12px;
+  border: 1px;
+}
+
+.signin:hover {
+  text-decoration: none;
 }
 
 a:hover{
@@ -25,4 +56,30 @@ a:hover{
 a {
   text-decoration: none;
   color: inherit;
+}
+
+.buttons {
+  margin: auto;
+  display: block;
+  position: relative;
+  font-weight: bold;
+  top: 40px;
+  text-align: center;
+}
+
+.button  {
+  color: #757575;
+  background-color: #f2f2f2;
+  padding: 10px 16px;
+  margin: 2.5px;
+}
+
+footer {
+  width: 100%;
+  height: 40px;
+  margin: auto;
+  color: #222;
+  background-color: #F2F2F2;
+  text-align: center;
+  position: fixed;
 }
