--- a/style.css
+++ b/style.css
@@ -59,10 +59,7 @@ a {
 }
 
 .buttons {
-  margin: auto;
-  display: block;
   position: relative;
-  font-weight: bold;
   top: 40px;
   text-align: center;
 }
@@ -72,14 +69,37 @@ a {
   background-color: #f2f2f2;
   padding: 10px 16px;
   margin: 2.5px;
+  font-weight: bold;
 }
 
-footer {
+.footer {
   width: 100%;
-  height: 40px;
-  margin: auto;
-  color: #222;
+  height: 50px;
+  color: #666;
   background-color: #F2F2F2;
   text-align: center;
+  margin-top: 258px;
+  margin-bottom: 0px;
+  word-spacing: 2em;
+}
+
+.foot-l {
+  text-align: left;
+  width: auto;
   position: fixed;
+  left: 0px;
+  padding-left: 30px;
+  padding-top: 15px;
+  text-align: center;
+  background-color: #F2F2F2
+}
+
+.foot-r {
+  text-align: right;
+  width: auto;
+  position: fixed;
+  right: 0px;
+  padding-right: 30px;
+  padding-top: 15px;
+  background-color: #F2F2F2
 }
